Commit de Jquery, clase 12

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    
+    <!-- Jquery -->
+    <script src="jquery-min.js"> </script>
 
     <link rel="stylesheet" href="./estilos/style.css">
     <title>SAPA - Adopción</title>
@@ -55,7 +58,8 @@
                 <div class="contenido my-2 w-100 mx-auto px-4">
                     <h1 class="display-3 fw-bold text-light contenido__h1">No compres.<br><span class="text-info">Adoptá una mascota.</span></h1>
                     <p class="text-light">El apoyo de cada ciudadano es muy importante, podés donar dinero o comida, o simplemente acercarte al refugio y adoptar un pichicho.</p>
-                    <a href="./vistas/perros.html" class="btn btn-light text-primary mb-5 fw-bold">Adoptá</a>
+                    <div class="btnAdopta"></div>
+                    <!-- <a href="./vistas/perros.html" class="btn btn-light text-primary mb-5 fw-bold">Adoptá</a> -->
                 </div>
             </div>
             <div class="col-lg-6 d-flex align-self-center px-4">
@@ -144,5 +148,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
+    <!-- Jquery -->
+    <script src="app.js"></script>
   </body>
 </html>
