Primer Commitde animaciones con jQuery

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 <div class="contenido my-2 w-100 mx-auto px-4">
                     <h1 class="display-3 fw-bold text-light contenido__h1">No compres.<br><span class="text-info">Adoptá una mascota.</span></h1>
                     <p class="text-light">El apoyo de cada ciudadano es muy importante, podés donar dinero o comida, o simplemente acercarte al refugio y adoptar un pichicho.</p>
-                    <div class="btnAdopta"></div>
                     <!-- <a href="./vistas/perros.html" class="btn btn-light text-primary mb-5 fw-bold">Adoptá</a> -->
+                    <a href="#" id="btnOpacity" class="mostrarImg btn btn-light text-primary mb-5 fw-bold">Adoptá</a>
                 </div>
             </div>
             <div class="col-lg-6 d-flex align-self-center px-4">
                 <div class="contenido mx-auto">
-                    <img src="./img/dog-home.png" class="contenido__img img-fluid" alt="">
+                    <img src="./img/dog-home.png" class="pruebaAnimacion contenido__img img-fluid" alt="">
                 </div>
             </div>
         </div>
